--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -532,7 +532,7 @@
         margin: 10px 0;
     }
 
-    .menu__close {
+    .hidden {
         display: block;
         width: 32px;
         height: 32px;
