Refactor styles using SASS

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -532,7 +532,7 @@
         margin: 10px 0;
     }
 
-    .hidden {
+    .menu-close {
         display: block;
         width: 32px;
         height: 32px;
